--- a/src/scss/components/_plans.scss
+++ b/src/scss/components/_plans.scss
@@ -15,6 +15,7 @@
     padding: 33px 0 45px;
     overflow: hidden;
     .plan__block {
+      cursor:grab;
       opacity: 0.3;
       background: white;
       margin-right: 30px;
@@ -68,6 +69,8 @@
             margin-right: 10px;
             width: 23px;
             height: 23px;
+  cursor: pointer;
+
           }
           label {
             font-size: 14px;
