--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -22,4 +22,102 @@
       }
     }
   }
+  @media (max-width: 1000px) {
+    padding: 45px 60px;
+    .content {
+      justify-content: space-between;
+      .info {
+        h1 {
+          font-size: 20px;
+
+          max-width: 335px;
+        }
+        ul {
+          li {
+            font-size: 13px;
+          }
+        }
+      }
+      img {
+        width: 336px;
+        height: 242px;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    padding: 30px 20px;
+    .content {
+      justify-content: space-between;
+      .info {
+        h1 {
+          max-width: 335px;
+        }
+        ul {
+          li {
+            font-size: 13px;
+          }
+        }
+      }
+      img {
+        width: 336px;
+        height: 242px;
+      }
+    }
+  }
+  @media (max-width: 660px) {
+    padding: 30px 30px;
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      .info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+          margin-top: 10px;
+          font-weight: bold;
+          font-size: 20px;
+          max-width: 435px;
+        }
+        ul {
+          margin: 10px 0 30px;
+          li {
+            list-style: inside;
+            font-size: 16px;
+            margin: 10px 0;
+          }
+        }
+      }
+      img {
+        order: -1;
+        width: 436px;
+        height: 314px;
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    padding: 20px 10px;
+
+    .content {
+     
+      .info {
+     
+        h1 {
+       font-size: 18px;
+       text-align:justify;
+        }
+        ul {
+         
+          li {
+          
+          }
+        }
+      }
+      img {
+        width: 226px;
+        height: 173px;
+      }
+    }
+  }
 }
