--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -31,4 +31,29 @@
       margin-left: 10px;
     }
   }
+  @media (max-width: 900px) {
+    padding: 20px 10px;
+  }
+  @media (max-width: 640px) {
+    padding: 20px 10px;
+    .logo{
+      flex-direction: column;
+    align-items: start;
+p{
+  margin-top: 5px;
+  margin-left: 0;
+}
+    }
+  }
+  @media (max-width: 425px) {
+    .logo{
+      p{
+font-size: 12px;
+line-height: 18px;
+
+      }
+    }
+  }
+
+
 }
