--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -74,6 +74,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        button{
+          width: 296px;
+        font-size: 12px;
+
+        }
         h1 {
           margin-top: 10px;
           font-weight: bold;
