--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -38,7 +38,7 @@
     padding: 20px 10px;
     .logo{
       flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
 p{
   margin-top: 5px;
   margin-left: 0;
