--- a/src/scss/components/_plans.scss
+++ b/src/scss/components/_plans.scss
@@ -28,7 +28,10 @@
       width: 350px;
       border-radius: 10px;
       box-shadow: 0px 5px 8px 0px rgba(34, 60, 80, 0.2);
+button{
+width: 287px;
 
+}
       .info {
         margin-bottom: 20px;
         h2 {
@@ -68,7 +71,7 @@
         form {
           margin-top: 24px;
           display: flex;
-          align-items: start;
+          align-items: flex-start;
           input {
             margin-right: 10px;
             width: 23px;
@@ -138,6 +141,11 @@
         max-width: 204px;
         padding: 20px;
         margin-right: 10px;
+        button{
+          width: 150px;
+        font-size: 12px;
+
+        }
         .info {
           margin-bottom: 10px;
           h2 {
